add weater menu

--- a/typ.css
+++ b/typ.css
@@ -33,8 +33,8 @@ body {
 }
 
 .overall-status {
-  width: 75%;
-  max-width: 300px;
+  width: 90%;
+  max-width: 320px;
   text-align: center;
   margin-bottom: 20px;
   padding: 10px;
@@ -90,11 +90,39 @@ footer {
   color: #252525;
 }
 
+.weather-info {
+  background-color: #191c24;
+  border: 1px;
+  border-radius: 8px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.weather-info h2 {
+  color: #333;
+  font-size: 20px;
+  margin-bottom: 15px;
+  position: relative;
+
+}
+
+.weather-info h2 {
+  color: #ececec;
+}
+
+.weather-info p {
+  color: #ffffff;
+}
+.weather-info p1 {
+  font-size: 12px;
+  color: #888;
+}
+
 /* Media Query for screens smaller than 600 pixels */
 @media (max-width: 600px) {
   .container {
     padding: 10px;
-    width: 85%;
+    width: 90%;
   }
 
   .website {
@@ -108,4 +136,9 @@ footer {
   .overall-status {
     max-width: 100%; /* Make the overall status container full width */
   }
+
+  .weather-info {
+    max-width: 85%;
+  }
+
 }
