--- a/typ.css
+++ b/typ.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,800&display=swap");
 
 body {
-  /* Existing styles */
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
@@ -13,6 +12,7 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+
 .overall-status {
   width: 89%;
   max-width: 308px;
@@ -22,6 +22,7 @@ body {
   border-radius: 8px;
   background-color: #212937;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease-in-out;
 }
 
 .container {
@@ -41,14 +42,6 @@ body {
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.online {
-  color: #14bb84;
-}
-
-.offline {
-  color: #fc7474;
 }
 
 footer {
@@ -86,7 +79,6 @@ footer {
   font-size: 20px;
   margin-bottom: 15px;
   position: relative;
-
 }
 
 .weather-info h2 {
@@ -96,10 +88,36 @@ footer {
 .weather-info p {
   color: #ffffff;
 }
+
 .weather-info p1 {
   font-size: 12px;
   color: #888;
 }
+
+.online {
+  color: #14bb84;
+}
+
+.offline {
+  color: #fc7474;
+}
+
+.twitter-container {
+  margin-top: 20px;
+}
+
+.twitter-card {
+  background-color: #212937;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.twitter-timeline {
+  width: 100%;
+  border: none;
+}
+
 
 /* Media Query for screens smaller than 600 pixels */
 @media (max-width: 600px) {
@@ -113,15 +131,14 @@ footer {
   }
 
   h1 {
-    font-size: 24px; /* Adjust the font size for smaller screens */
+    font-size: 24px;
   }
 
   .overall-status {
-    max-width: 100%; /* Make the overall status container full width */
+    max-width: 100%;
   }
 
   .weather-info {
     max-width: 85%;
   }
-
 }
