--- a/typ.css
+++ b/typ.css
@@ -8,7 +8,7 @@ body {
   background-color: #131a26;
   display: flex;
   flex-direction: column;
-  justify-content: fixed; /* Ini sepertinya typo, seharusnya 'flex-start' atau 'center' */
+  justify-content: fixed;
   align-items: center;
   min-height: 100vh;
 }
@@ -107,6 +107,7 @@ footer {
 }
 
 .twitter-card {
+  width: 96%;
   background-color: #212937;
   border-radius: 10px;
   padding: 15px;
@@ -114,7 +115,7 @@ footer {
 }
 
 .twitter-timeline {
-  width: 100%;
+  width: 200%;
   border: none;
 }
 
