add embed instagram anda fix delete loading website to origin and fix notification discord

--- a/typ.css
+++ b/typ.css
@@ -112,18 +112,27 @@ footer {
 }
 
 .twitter-card {
-  width: 96%;
+  width: 95.8%;
   background-color: #212937;
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.twitter-timeline {
-  width: 200%;
-  border: none;
+.instagram-card {
+  width: 35.4%;
+  padding: 15px;
+  margin: 1%;
+  background-color: #212937;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.instagram-card h2 {
+  font-size: 170%;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
 
 /* Media Query for screens smaller than 600 pixels */
 @media (max-width: 600px) {
@@ -154,8 +163,14 @@ footer {
 
   .twitter-card {
     padding: 10px;
-    margin: 0 auto; /* Menengahkan card secara horizontal */
-    max-width: 91%; /* Sesuaikan dengan kebutuhan Anda */
+    margin: 0 auto; 
+    max-width: 91%; 
+  }
+
+  .instagram-card{
+    padding: 10px;
+    margin: 3%; 
+    width: 90%; 
   }
 
   footer {
