test trigger notif lagi masih ada salah

--- a/typ.css
+++ b/typ.css
@@ -131,7 +131,7 @@ footer {
 .instagram-card h2 {
   font-size: 150%;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: #ececec;
 }
 
 /* Media Query for screens smaller than 600 pixels */
