--- a/typ.css
+++ b/typ.css
@@ -2,35 +2,58 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+}
+.html, body {
   margin: 0;
   padding: 0;
+}
+
+.main-page {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  padding: 20px;
   color: #e5e5e6;
-  background-color: #131a26;
-  display: flex;
-  flex-direction: column;
-  justify-content: fixed;
   align-items: center;
   min-height: 100vh;
+  background-color: #b1c9ef;
+  margin: 0; /* Menghapus margin yang default diberikan oleh browser */
+}
+
+.main-page img {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 10px 18px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.second-page {
+  background-color: #545c77; /* Warna latar halaman kedua */
+  padding: 20px;
 }
 
 .overall-status {
+  position: relative;
   width: 89%;
   max-width: 308px;
   text-align: center;
-  margin-bottom: 20px;
   padding: 10px;
+  left: 61.5%;
+  top: 21%;
   border-radius: 8px;
-  background-color: #212937;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s ease-in-out;
+  background-color: #302e42;
 }
 
 .container {
-  width: 75%;
-  max-width: 890px;
+  position: relative;
+  width: 100%;
+  max-width: 895px;
+  left: 10%;
   padding: 20px;
-  border-radius: 10px;
-  background-color: #212937;
+  border-radius: 40px;
+  border-top-right-radius: 0;
+  background-image: linear-gradient(to right top, #302e42, #2a2a3c,#252736, #202330,#1c1f2a);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -41,12 +64,185 @@ body {
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 8px;
+  background-color: #302e42;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.container p1 {
+  color: #fff;
+  font-size: 12px;
+}
+
+.weather-info {
+  width: 50%;
+  position: relative;
+  padding: 20px;
+  left: 117%;
+  top:7.5%;
+  margin-bottom: 1%;
+  border-top-right-radius: 100px;
+  background-color: #b1b8f5;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.weather-info h2 {
+  color: #1b1e2b;
+  font-size: 20px;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.weather-info h2 {
+  color: #1b1e2b;
+}
+
+.weather-info p {
+  color: #1b1e2b;
+}
+
+.weather-info p1 {
+  font-size: 12px;
+  color: #1b1e2b;
+}
+
+.container p {
+  font-size: 12px;
+  color: #888;
+}
+
+.online {
+  color: #14bb84;
+}
+
+.offline {
+  color: #fc7474;
+}
+
+.twitter-card {
+  position: relative;
+  width: 51%;
+  left: 17%;
+  top: 400px;
+  background-color: #d0b6a1;
+  border-radius: 20px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.twitter-card h2 {
+  font-size: 25px;
+  color: #1b1e2b;
+}
+
+.instagram-card {
+  position: relative;
+  height: 20%;
+  width: 35.4%;
+  padding: 15px;
+  margin: 1%;
+  background-color: #212937;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.instagram-card h2 {
+  font-size: 150%;
+  margin-bottom: 10px;
+  color: #ececec;
+}
+
+.news-container {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  top: 2%;
+  left: 10%;
+  max-width: 900px;
+  margin: 0 auto;
+  background-image: linear-gradient(to right top, #302e42, #2a2a3c, #252736, #202330, #1c1f2a);
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow-y: auto; 
+}
+.news-container h2 {
+  margin-top: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+
+#newsList {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #666;
+}
+
+#newsList li {
+  margin-bottom: 10px;
+}
+
+#newsList a {
+  display: block;
+  margin-top: 10px;
+  padding: 15px;
+  background-color: #302e42;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+#newsList a:hover {
+  color: #556c92;
+}
+
+news-info {
+  padding-left: 10px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px; /* Untuk menambahkan sudut melengkung pada gambar */
+  margin-bottom: 10px;
+}
+
+li {
+  list-style: none;
+}
+
+#pagination {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+#prevPageBtn,
+#nextPageBtn {
+  cursor: pointer;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #4f4c6d;
+  color: #fff;
+}
+
+#prevPageBtn:disabled,
+#nextPageBtn:disabled {
+  background-color: #7c78b1;
+  cursor: not-allowed;
 }
 
 footer {
+  position: relative;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 1%;
   color: #888;
 }
 
@@ -66,122 +262,23 @@ footer {
   color: #252525;
 }
 
-.weather-info {
-  background-color: #212937;
-  border: 1px;
-  border-radius: 8px;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.weather-info h2 {
-  color: #333;
-  font-size: 20px;
-  margin-bottom: 15px;
-  position: relative;
-}
-
-.weather-info h2 {
-  color: #ececec;
-}
-
-.weather-info p {
-  color: #ffffff;
-}
-
-.weather-info p1 {
-  font-size: 12px;
-  color: #888;
-}
-
-.container p {
-  font-size: 12px;
-  color: #888;
-}
-
-.online {
-  color: #14bb84;
-}
-
-.offline {
-  color: #fc7474;
-}
-
-.twitter-container {
-  margin-top: 20px;
-}
-
-.twitter-card {
-  width: 95.8%;
-  background-color: #212937;
-  border-radius: 10px;
-  padding: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.instagram-card {
-  width: 35.4%;
-  padding: 15px;
-  margin: 1%;
-  background-color: #212937;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.instagram-card h2 {
-  font-size: 150%;
-  margin-bottom: 10px;
-  color: #ececec;
-}
 
 /* Media Query for screens smaller than 600 pixels */
-@media (max-width: 600px) {
-  .container {
-    padding: 10px;
-    width: 90%;
+  @media (max-width: 600px) {
+    .container {
+      padding: 10px;
+      width: 90%;
+    }
+  
+    .website {
+      padding: 8px;
+    }
+  
+    h1 {
+      font-size: 24px;
+    }
+  
+    .overall-status {
+      max-width: 95%;
+    }
   }
-
-  .website {
-    padding: 8px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  .overall-status {
-    max-width: 95%;
-  }
-
-  .weather-info {
-    max-width: 85%;
-  }
-
-  .twitter-container {
-    text-align: center;
-  }
-
-  .twitter-card {
-    padding: 10px;
-    margin: 0 auto; 
-    max-width: 91%; 
-  }
-
-  .instagram-card{
-    padding: 10px;
-    margin: 3%; 
-    width: 90%; 
-  }
-  .instagram-card h2 {
-    text-align: center;
-
-  }
-
-  footer {
-    font-size: 14px;
-  }
-
-  .social-icons a {
-    font-size: 16px;
-  }
-}
